<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MDOT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="UserNameLabel">UserName:</string>
    <string name="Enter_Password">Enter_Password</string>
    <string name="Password">Password</string>
    <string name="Enter_password">Enter_password</string>
    <string name="Cancel">Cancel</string>
    <string name="UserName">UserName</string>
    <string name="Login">Login</string>
    <string name="Enter_UserName">Enter_UserName</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_dot__daily__report">DOT_Daily_Report</string>
    <string name="title_activity_patient_registration">PatientRegistration</string>
    <string name="title_activity_ambassador_registration">AmbassadorRegistration</string>
    <string name="title_activity_view_patient_records">ViewPatientRecords</string>
    <string name="title_activity_side_effect_screening">SideEffectScreening</string>
    <string name="title_activity_record_dot__video">RecordDOT_Video</string>
    <string name="title_activity_daily_report">DailyReportActivity</string>
    <string name="title_fragment_report1">title_fragment_report1</string>
 <string name="title_fragment_report3">title_fragment_report3</string>
  <string name="title_fragment_report2">title_fragment_report2</string>
  <string name="title_fragment_report5">title_fragment_report5</string>
  <string name="title_fragment_report4">title_fragment_report4</string>
    <string name="title_fragment_report6">title_fragment_report6</string> 
    <string name="title_fragment_p_reg1" >title_fragment_p_reg1</string> 
    <string name="title_fragment_p_reg2" >title_fragment_p_reg2</string>  
    <string name="title_fragment_p_reg3" >title_fragment_p_reg3</string> 
<string-array name="spinnerlistOtherReasons">
        <item>Reason1</item>
        <item>Reason2</item>
        <item>Reason3</item>
        <item>Reason4</item>
        <item>Reason5</item>

    </string-array>
  <string-array name="spinnerlistOtherReasons2">
        <item>Reason1</item>
        <item>Reason2</item>
        <item>Reason3</item>
        <item>Reason4</item>
        <item>Reason5</item>

    </string-array>
   <string-array name="spinnerregsex">
        <item>Male</item>
        <item>Female</item>
        

    </string-array>
    <string-array name="spinnerdistrict">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
  
       <!-- Actions -->
    <string name="action_toggle">Toggle indicator</string>
    <string name="action_add_item">Add item</string>
    <string name="action_remove_item">Remove item</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
  
  
</resources>
